# scfunctions

./: README.md  pyproject.toml
src/sctoolkit/: __init__.py  nmf.py
